# repo-tracker

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  config.example.yml  memo.md  repos.example.csv
fetcher-go/: go.mod
fetcher-go/cmd/repo-tracker/: main.go
fetcher-go/internal/config/: config.go  config_test.go
fetcher-go/internal/gitlab/: gitlab.go
fetcher-go/internal/model/: model.go
fetcher-go/internal/parser/: gitlab_ci.go  gitlab_ci_test.go  package_json.go  package_json_test.go  parser.go  pom_xml.go  pom_xml_test.go
fetcher-rs/: Cargo.toml
fetcher-rs/src/: config.rs  gitlab.rs  main.rs  model.rs
fetcher-rs/src/parser/: mod.rs  package_json.rs  pom_xml.rs
site/: index.html  style.css
site/js/: app.js  ci_includes.js  grep.js  parsed_search.js  render.js  router.js  store.js
site/js/views/: ci_includes.js  file_detail.js  repo_detail.js  repos.js  search.js
site/test/: grep.test.js  parsed_search.test.js  render.test.js  repos.test.js  router.test.js  runner.js  test.html
src/: config.rs  gitlab.rs  main.rs  model.rs
src/parser/: gitlab_ci.rs
