[package]
name = "repo-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
urlencoding = "2"
